Fixed text alignment issue

--- a/src/WebComponents/Button/button.scss
+++ b/src/WebComponents/Button/button.scss
@@ -87,6 +87,7 @@
 
         > *:not(style) {
             display: inline-block;
+            vertical-align: top;
         }
 
         > vi-icon {
